--- a/adaptivegrid.css
+++ b/adaptivegrid.css
@@ -1,7 +1,6 @@
-
 /**
-* Adapt Framework
-* Adaptive grid framework with responsive bits thrown in
+* AdaptiveGrid
+* AdaptiveGrid is a fluid CSS grid framework which adapts to the screen size.
 */
 
 
