--- a/adaptivegrid.css
+++ b/adaptivegrid.css
@@ -1,6 +1,6 @@
 /**
 * AdaptiveGrid
-* AdaptiveGrid is a fluid CSS grid framework which adapts to the screen size. Yoyo
+* AdaptiveGrid is a fluid CSS grid framework which adapts to the screen size. Yoyoyo
 */
 
 
