--- a/adaptivegrid.css
+++ b/adaptivegrid.css
@@ -1,218 +1,2 @@
-/**
-* AdaptiveGrid
-* AdaptiveGrid is a fluid CSS grid framework which adapts to the screen size.
-* https://github.com/pea/AdaptiveGrid
-*/
-
-
-
-
-/**
-* The Grid
-*/
-
-
-.grid {
-    overflow: hidden;  
-    clear: both;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.col {
-    float: left;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.grid .col.perc100 { width: 100% }
-.grid .col.perc80 { width: 80% }
-.grid .col.perc70 { width: 70% }
-.grid .col.perc66 { width: 66.6666666666% }
-.grid .col.perc60 { width: 60% }
-.grid .col.perc50 { width: 50% }
-.grid .col.perc40 { width: 40% }
-.grid .col.perc33 { width: 33.3333333333% }
-.grid .col.perc30 { width: 30% }
-.grid .col.perc25 { width: 25% }
-.grid .col.perc20 { width: 20% }
-.grid .col.perc16 { width: 16.66666666666667% }
-
-/* Gutter */
-.grid.gut30 .col { padding: 15px }
-.grid.gut20 .col { padding: 10px }
-.grid.gut10 .col { padding: 5px }
-
-.grid.gut30 { margin: -15px }
-.grid.gut20 { margin: -10px }
-.grid.gut10 { margin: -5px }
-
-.grid.gut30.outergut { margin: 0; padding: 15px }
-.grid.gut20.outergut { margin: 0; padding: 10px }
-.grid.gut10.outergut { margin: 0; padding: 5px }
-.grid.gut5.outergut { margin: 0; padding: 2.5px }
-
-/**
-* Responses 
-*/
-
-
-/* Phones and smartphones in portrait */
-@media all and (min-width: 0) and (max-width: 480px){ /* Smallest */
-
-    /**
-    * Adaptive Framework
-    */
-
-    /* Hiding */
-    .smallest_hide { display: none; }
-    
-    /* Grid */
-    .grid .col.smallest_to_100 { width: 100% }
-    .grid .col.smallest_to_80 { width: 80% }
-    .grid .col.smallest_to_70 { width: 70% }
-    .grid .col.smallest_to_66 { width: 66.6666666666% }
-    .grid .col.smallest_to_60 { width: 60% }
-    .grid .col.smallest_to_50 { width: 50% }
-    .grid .col.smallest_to_40 { width: 40% }
-    .grid .col.smallest_to_33 { width: 33.3333333333% }
-    .grid .col.smallest_to_30 { width: 30% }
-    .grid .col.smallest_to_25 { width: 25% }
-    .grid .col.smallest_to_20 { width: 20% }
-    .grid .col.smallest_to_16 { width: 16.66666666666667% }
-  
-}
- 
-/* Small smartphones in landscape (iPhone in landscape) */
-@media all and (min-width: 481px) and (max-width: 600px){ /* Smaller */
-
-    /**
-    * Adaptive Framework
-    */
-
-    /* Hiding */
-    .smaller_hide { display: none; }
-
-    /* Grid */
-    .grid .col.smaller_to_100 { width: 100% }
-    .grid .col.smaller_to_80 { width: 80% }
-    .grid .col.smaller_to_70 { width: 70% }
-    .grid .col.smaller_to_66 { width: 66.6666666666% }
-    .grid .col.smaller_to_60 { width: 60% }
-    .grid .col.smaller_to_50 { width: 50% }
-    .grid .col.smaller_to_40 { width: 40% }
-    .grid .col.smaller_to_33 { width: 33.3333333333% }
-    .grid .col.smaller_to_30 { width: 30% }
-    .grid .col.smaller_to_25 { width: 25% }
-    .grid .col.smaller_to_20 { width: 20% }
-    .grid .col.smaller_to_16 { width: 16.66666666666667% }
-    
-    
-}
- 
-/* Small tablets and large phones in landscape (Nexus 7) */
-@media all and (min-width: 601px) and (max-width: 767px) { /* Small */
-
-    /**
-    * Adaptive Framework
-    */
-
-    /* Hiding */
-    .small_hide { display: none; }
-
-    /* Grid */
-    .grid .col.small_to_100 { width: 100% }
-    .grid .col.small_to_80 { width: 80% }
-    .grid .col.small_to_70 { width: 70% }
-    .grid .col.small_to_66 { width: 66.6666666666% }
-    .grid .col.small_to_60 { width: 60% }
-    .grid .col.small_to_50 { width: 50% }
-    .grid .col.small_to_40 { width: 40% }
-    .grid .col.small_to_33 { width: 33.3333333333% }
-    .grid .col.small_to_30 { width: 30% }
-    .grid .col.small_to_25 { width: 25% }
-    .grid .col.small_to_20 { width: 20% }
-    .grid .col.small_to_16 { width: 16.66666666666667% }
-
-    
-}
- 
-/* Large tablets and Facebook iframe (iPad in portrait, Facebook on desktop) */
-@media all and (min-width: 768px) and (max-width: 1023px){ /* Medium */
-
-    /**
-    * Adaptive Framework
-    */
-
-    /* Hiding */
-    .medium_hide { display: none; }
-    
-    /* Grid */
-    .grid .col.medium_to_100 { width: 100% }
-    .grid .col.medium_to_80 { width: 80% }
-    .grid .col.medium_to_70 { width: 70% }
-    .grid .col.medium_to_66 { width: 66.6666666666% }
-    .grid .col.medium_to_60 { width: 60% }
-    .grid .col.medium_to_50 { width: 50% }
-    .grid .col.medium_to_40 { width: 40% }
-    .grid .col.medium_to_33 { width: 33.3333333333% }
-    .grid .col.medium_to_30 { width: 30% }
-    .grid .col.medium_to_25 { width: 25% }
-    .grid .col.medium_to_20 { width: 20% }
-    .grid .col.medium_to_16 { width: 16.66666666666667% }
- 
-}
-
-/* Large tablets (iPad in landscape) */
-@media all and (min-width: 1024px) and (max-width: 1199px){ /* Large */
-
-    /**
-    * Adaptive Framework
-    */
-
-    /* Hiding */
-    .large_hide { display: none; }
-
-    /* Grid */
-    .grid .col.large_to_100 { width: 100% }
-    .grid .col.large_to_80 { width: 80% }
-    .grid .col.large_to_70 { width: 70% }
-    .grid .col.large_to_66 { width: 66.6666666666% }
-    .grid .col.large_to_60 { width: 60% }
-    .grid .col.large_to_50 { width: 50% }
-    .grid .col.large_to_40 { width: 40% }
-    .grid .col.large_to_33 { width: 33.3333333333% }
-    .grid .col.large_to_30 { width: 30% }
-    .grid .col.large_to_25 { width: 25% }
-    .grid .col.large_to_20 { width: 20% }
-    .grid .col.large_to_16 { width: 16.66666666666667% }
-    
-}
- 
-/* Laptops and desktops */
-@media all and (min-width: 1200px){ /* Larger */
-
-    /**
-    * Adaptive Framework
-    */
-
-    /* Hiding */
-    .larger_hide { display: none; }
-
-    /* Grid */
-    .grid .col.larger_to_100 { width: 100% }
-    .grid .col.larger_to_80 { width: 80% }
-    .grid .col.larger_to_70 { width: 70% }
-    .grid .col.larger_to_66 { width: 66.6666666666% }
-    .grid .col.larger_to_60 { width: 60% }
-    .grid .col.larger_to_50 { width: 50% }
-    .grid .col.larger_to_40 { width: 40% }
-    .grid .col.larger_to_33 { width: 33.3333333333% }
-    .grid .col.larger_to_30 { width: 30% }
-    .grid .col.larger_to_25 { width: 25% }
-    .grid .col.larger_to_20 { width: 20% }
-    .grid .col.larger_to_16 { width: 16.66666666666667% }
-    
-}
+.grid{overflow:hidden;clear:both;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.col{float:left;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.grid .col.perc100{width:100%}.grid .col.perc80{width:80%}.grid .col.perc70{width:70%}.grid .col.perc66{width:66.66667%}.grid .col.perc60{width:60%}.grid .col.perc50{width:50%}.grid .col.perc40{width:40%}.grid .col.perc33{width:33.33333%}.grid .col.perc30{width:30%}.grid .col.perc25{width:25%}.grid .col.perc20{width:20%}.grid .col.perc16{width:16.66667%}.grid.gut30 .col{padding:15px}.grid.gut20 .col{padding:10px}.grid.gut10 .col{padding:5px}.grid.gut30{margin:-15px}.grid.gut20{margin:-10px}.grid.gut10{margin:-5px}.grid.gut30.outergut{margin:0;padding:15px}.grid.gut20.outergut{margin:0;padding:10px}.grid.gut10.outergut{margin:0;padding:5px}.grid.gut5.outergut{margin:0;padding:2.5px}@media all and (min-width: 0) and (max-width: 480px){.smallest_hide{display:none}.grid .col.smallest_to_100{width:100%}.grid .col.smallest_to_80{width:80%}.grid .col.smallest_to_70{width:70%}.grid .col.smallest_to_66{width:66.66667%}.grid .col.smallest_to_60{width:60%}.grid .col.smallest_to_50{width:50%}.grid .col.smallest_to_40{width:40%}.grid .col.smallest_to_33{width:33.33333%}.grid .col.smallest_to_30{width:30%}.grid .col.smallest_to_25{width:25%}.grid .col.smallest_to_20{width:20%}.grid .col.smallest_to_16{width:16.66667%}}@media all and (min-width: 481px) and (max-width: 600px){.smaller_hide{display:none}.grid .col.smaller_to_100{width:100%}.grid .col.smaller_to_80{width:80%}.grid .col.smaller_to_70{width:70%}.grid .col.smaller_to_66{width:66.66667%}.grid .col.smaller_to_60{width:60%}.grid .col.smaller_to_50{width:50%}.grid .col.smaller_to_40{width:40%}.grid .col.smaller_to_33{width:33.33333%}.grid .col.smaller_to_30{width:30%}.grid .col.smaller_to_25{width:25%}.grid .col.smaller_to_20{width:20%}.grid .col.smaller_to_16{width:16.66667%}}@media all and (min-width: 601px) and (max-width: 767px){.small_hide{display:none}.grid .col.small_to_100{width:100%}.grid .col.small_to_80{width:80%}.grid .col.small_to_70{width:70%}.grid .col.small_to_66{width:66.66667%}.grid .col.small_to_60{width:60%}.grid .col.small_to_50{width:50%}.grid .col.small_to_40{width:40%}.grid .col.small_to_33{width:33.33333%}.grid .col.small_to_30{width:30%}.grid .col.small_to_25{width:25%}.grid .col.small_to_20{width:20%}.grid .col.small_to_16{width:16.66667%}}@media all and (min-width: 768px) and (max-width: 1023px){.medium_hide{display:none}.grid .col.medium_to_100{width:100%}.grid .col.medium_to_80{width:80%}.grid .col.medium_to_70{width:70%}.grid .col.medium_to_66{width:66.66667%}.grid .col.medium_to_60{width:60%}.grid .col.medium_to_50{width:50%}.grid .col.medium_to_40{width:40%}.grid .col.medium_to_33{width:33.33333%}.grid .col.medium_to_30{width:30%}.grid .col.medium_to_25{width:25%}.grid .col.medium_to_20{width:20%}.grid .col.medium_to_16{width:16.66667%}}@media all and (min-width: 1024px) and (max-width: 1199px){.large_hide{display:none}.grid .col.large_to_100{width:100%}.grid .col.large_to_80{width:80%}.grid .col.large_to_70{width:70%}.grid .col.large_to_66{width:66.66667%}.grid .col.large_to_60{width:60%}.grid .col.large_to_50{width:50%}.grid .col.large_to_40{width:40%}.grid .col.large_to_33{width:33.33333%}.grid .col.large_to_30{width:30%}.grid .col.large_to_25{width:25%}.grid .col.large_to_20{width:20%}.grid .col.large_to_16{width:16.66667%}}@media all and (min-width: 1200px){.larger_hide{display:none}.grid .col.larger_to_100{width:100%}.grid .col.larger_to_80{width:80%}.grid .col.larger_to_70{width:70%}.grid .col.larger_to_66{width:66.66667%}.grid .col.larger_to_60{width:60%}.grid .col.larger_to_50{width:50%}.grid .col.larger_to_40{width:40%}.grid .col.larger_to_33{width:33.33333%}.grid .col.larger_to_30{width:30%}.grid .col.larger_to_25{width:25%}.grid .col.larger_to_20{width:20%}.grid .col.larger_to_16{width:16.66667%}}
+/*# sourceMappingURL=adaptivegrid.css.map */
