--- a/adaptivegrid.scss
+++ b/adaptivegrid.scss
@@ -14,15 +14,24 @@
 
 /* List of custom column sizes in percentages */
 
-$column_sizes: 10 16.66666666666667 20 25 30 33.3333333333 40 45 50 55 60 66.6666666666 70 80 100;
+$column-sizes: 10 16.66666666666667 20 25 30 33.3333333333 40 45 50 55 60 66.6666666666 70 80 100;
 
 /* List of custom gutter sizes in pixels */
 
-$gutter_sizes: 5 10 15 20 30 40 50;
+$gutter-sizes: 5 10 15 20 30 40 50;
 
 /* Delimiter for class names (- or _) */
 
 $delimiter: "-";
+
+/* Screen sizes */
+
+$mobile-small-portrait-width: 480px;
+$mobile-small-landscape-width: 600px;
+$mobile-large-width: 767px;
+$tablet-portrait-width: 1023px;
+$tablet-landscape-width: 1199px;
+$desktop-width: 1200px;
 
 .grid {
     
@@ -37,7 +46,7 @@ $delimiter: "-";
     /* Column Sizes */
     
     .col {
-        @each $size in $column_sizes {
+        @each $size in $column-sizes {
             &.perc#{floor($size)} {
                 width: #{$size}#{"%"};
             } 
@@ -46,21 +55,21 @@ $delimiter: "-";
     
     /* Gutter */
     
-    @each $size in $gutter_sizes {
+    @each $size in $gutter-sizes {
         &.gut#{floor($size)} {
             margin: #{"-"}#{$size/2}#{"px"};
         }
     }
     
-    @each $size in $gutter_sizes {
-        &.gut#{floor($size)} .col {
+    @each $size in $gutter-sizes {
+        &.gut#{floor($size)} > .col {
             padding: #{$size/2}#{"px"};
         }
     }
     
     /* Outer Gutter */
     
-    @each $size in $gutter_sizes {
+    @each $size in $gutter-sizes {
         &.gut#{floor($size)}.outergut {
             margin: 0; padding: #{$size/2}#{"px"};
         }
@@ -69,12 +78,25 @@ $delimiter: "-";
 }
 
 /**
+ * Showing
+ */
+
+.smallest#{$delimiter}show,
+.smaller#{$delimiter}show,
+.small#{$delimiter}show,
+.medium#{$delimiter}show,
+.large#{$delimiter}show,
+.larger#{$delimiter}show {
+    display: none
+}
+
+/**
 * Responses 
 */
 
 
 /* Phones and smartphones in portrait */
-@media all and (min-width: 0) and (max-width: 480px){ /* Smallest */
+@media all and (min-width: 0) and (max-width: $mobile-small-portrait-width){ /* Smallest */
 
     /**
     * Adaptive Framework
@@ -82,22 +104,25 @@ $delimiter: "-";
 
     /* Hiding */
     .smallest#{$delimiter}hide { display: none; }
+
+    /* Showing */
+    .smallest#{$delimiter}show { display: block; }
     
     /* Grid */
     .grid {
-    	.col {
-            @each $size in $column_sizes {
+        .col {
+            @each $size in $column-sizes {
                 &.smallest#{$delimiter}to#{$delimiter}#{floor($size)} {
                     width: #{$size}#{"%"};
                 } 
             }
-	    }
+        }
     }
   
 }
  
 /* Small smartphones in landscape (iPhone in landscape) */
-@media all and (min-width: 481px) and (max-width: 600px){ /* Smaller */
+@media all and (min-width: #{$mobile-small-portrait-width + 1}) and (max-width: $mobile-small-landscape-width){ /* Smaller */
 
     /**
     * Adaptive Framework
@@ -106,21 +131,24 @@ $delimiter: "-";
     /* Hiding */
     .smaller#{$delimiter}hide { display: none; }
 
+    /* Showing */
+    .smaller#{$delimiter}show { display: block; }
+
     /* Grid */
     .grid {
-	    .col {
-            @each $size in $column_sizes {
+        .col {
+            @each $size in $column-sizes {
                 &.smaller#{$delimiter}to#{$delimiter}#{floor($size)} {
                     width: #{$size}#{"%"};
                 } 
             }
-	    }
+        }
     }
     
 }
  
 /* Small tablets and large phones in landscape (Nexus 7) */
-@media all and (min-width: 601px) and (max-width: 767px) { /* Small */
+@media all and (min-width: #{$mobile-small-landscape-width + 1}) and (max-width: $mobile-large-width) { /* Small */
 
     /**
     * Adaptive Framework
@@ -129,21 +157,24 @@ $delimiter: "-";
     /* Hiding */
     .small#{$delimiter}hide { display: none; }
 
+    /* Showing */
+    .small#{$delimiter}show { display: block; }
+
     /* Grid */
     .grid {
-	    .col {
-            @each $size in $column_sizes {
+        .col {
+            @each $size in $column-sizes {
                 &.small#{$delimiter}to#{$delimiter}#{floor($size)} {
                     width: #{$size}#{"%"};
                 } 
             }
-	    }
-	}
+        }
+    }
     
 }
  
 /* Large tablets and Facebook iframe (iPad in portrait, Facebook on desktop) */
-@media all and (min-width: 768px) and (max-width: 1023px){ /* Medium */
+@media all and (min-width: #{$mobile-large-width + 1}) and (max-width: $tablet-portrait-width){ /* Medium */
 
     /**
     * Adaptive Framework
@@ -151,22 +182,25 @@ $delimiter: "-";
 
     /* Hiding */
     .medium#{$delimiter}hide { display: none; }
+
+    /* Showing */
+    .medium#{$delimiter}show { display: block; }
     
     /* Grid */
     .grid {
-	    .col {
-            @each $size in $column_sizes {
+        .col {
+            @each $size in $column-sizes {
                 &.medium#{$delimiter}to#{$delimiter}#{floor($size)} {
                     width: #{$size}#{"%"};
                 } 
             }
-	    }
+        }
     }
  
 }
 
 /* Large tablets (iPad in landscape) */
-@media all and (min-width: 1024px) and (max-width: 1199px){ /* Large */
+@media all and (min-width: #{$tablet-portrait-width + 1}) and (max-width: $tablet-landscape-width){ /* Large */
 
     /**
     * Adaptive Framework
@@ -175,21 +209,24 @@ $delimiter: "-";
     /* Hiding */
     .large#{$delimiter}hide { display: none; }
 
+    /* Showing */
+    .large#{$delimiter}show { display: block; }
+
     /* Grid */
     .grid {
-	    .col {
-            @each $size in $column_sizes {
+        .col {
+            @each $size in $column-sizes {
                 &.large#{$delimiter}to#{$delimiter}#{floor($size)} {
                     width: #{$size}#{"%"};
                 } 
             }
-	    }
+        }
     }
     
 }
  
 /* Laptops and desktops */
-@media all and (min-width: 1200px){ /* Larger */
+@media all and (min-width: $desktop-width){ /* Larger */
 
     /**
     * Adaptive Framework
@@ -198,15 +235,18 @@ $delimiter: "-";
     /* Hiding */
     .larger#{$delimiter}hide { display: none; }
 
+    /* Showing */
+    .larger#{$delimiter}show { display: block; }
+
     /* Grid */
     .grid {
-	    .col {
-            @each $size in $column_sizes {
+        .col {
+            @each $size in $column-sizes {
                 &.larger#{$delimiter}to#{$delimiter}#{floor($size)} {
                     width: #{$size}#{"%"};
                 } 
             }
-	    }
+        }
     }
     
 }
