--- a/adaptivegrid.scss
+++ b/adaptivegrid.scss
@@ -38,7 +38,9 @@ $desktop-width: 1200px;
     /* The Grid */
     
     display: flex;
+    display: -webkit-flex;
     flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
