--- a/adaptivegrid.scss
+++ b/adaptivegrid.scss
@@ -24,6 +24,8 @@ $gutter-sizes: 5 10 15 20 30 40 50 60 70 100;
 
 $delimiter: "-";
 
+/* Sizes to use for class names */
+
 $smallest: "smallest";
 $smaller: "smaller";
 $small: "small";
